--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -21,6 +21,11 @@ jobs:
         run: bun install --production
       - name: Generate README.md File
         run: bun run index.ts
+        env:
+          WEATHER_LONGITUDE: ${{ secrets.WEATHER_LONGITUDE }}
+          WEATHER_LATITUDE: ${{ secrets.WEATHER_LATITUDE }}
+          WAKATIME_JSON_EMBED_URL: ${{ secrets.WAKATIME_JSON_EMBED_URL }}
+          TIMEZONE: "Europe/Berlin"
       - uses: EndBug/add-and-commit@v9
         with:
           add: "README.md"
