--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ WEATHER_LONGITUDE="xx.yy"
 WEATHER_LATITUDE="xx.yy"
 
 WAKATIME_JSON_EMBED_URL="https://wakatime.com/share/@YOUR_HANDLE/EMBED_UUID.json"
+HOMELAB_API_URL="xx.yy"
 YHYPE_TRACKER_URL="https://hit.yhype.me/github/profile?user_id=YOUR_ID"
 
 TIMEZONE="Europe/London"
