--- a/README.template
+++ b/README.template
@@ -34,6 +34,17 @@ My best day was on {{bestDayCodingDate}} with {{bestDayCodingTime}}.
   <img alt="Prettier" src="https://img.shields.io/badge/Prettier-f7b93e?style=flat-square&logo=prettier&logoColor=white">
 </p>
 
+<details>
+<summary>Homelab</summary>
+<p>
+  <img alt="Uptime" src="https://img.shields.io/badge/Uptime-{{homelabUptime}}-pink">
+  <img alt="Power Usage" src="https://img.shields.io/badge/Power_Usage-{{homelabPower}}-green">
+  </br></br>
+  <img alt="CPU Usage" src="https://img.shields.io/badge/CPU_Usage-{{homelabCpuUsed}}%25-orange">
+  <img alt="Memory Usage" src="https://img.shields.io/badge/Ram_Usage-{{homelabRamUsed}}/{{homelabRamTotal}}-blue">
+</p>
+</details>
+
 ------------------------------------------------------------------
 <p align="center">
 This <b>README.md</b> file is generated <b>every 6 hours</b>!</br>
