Added Setup and Homelab Configurations

--- a/README.template
+++ b/README.template
@@ -35,7 +35,32 @@ My best day was on {{bestDayCodingDate}} with {{bestDayCodingTime}}.
 </p>
 
 <details>
-<summary>Homelab</summary>
+<summary>PC Setup</summary>
+
+<h3>Configuration:</h3>
+
+- CPU: AMD Ryzen 9 5950x (16C/32T)
+- GPU: NVIDIA RTX 3060 Ti (8GB)
+- RAM: 64GB 3600MT/s
+- Storage: 1.5TB NVME (0.5TB Gen4 + 1TB Gen3)
+- Operating System: Windows 11
+
+_Definitely not a configuration that I would recommend to normal users._
+
+</details>
+
+<details>
+<summary>Homelab Setup</summary>
+
+<h3>Configuration:</h3>
+
+- CPU: AMD Ryzen 7 7840HS (8C/16T)
+- GPU: Integrated Radeon 780M
+- RAM: 32GB 3600MT/s
+- Storage: 6.0TB (2.0TB NVME Gen3 + 4.0TB HDD)
+- Operating System: Proxmox (Debian)
+
+<h3>Metrics:</h3>
 <p>
   <img alt="Uptime" src="https://img.shields.io/badge/Uptime-{{homelabUptime}}-pink">
   <img alt="Power Usage" src="https://img.shields.io/badge/Power_Usage-{{homelabPower}}-green">
