Added Contact Details

--- a/README.template
+++ b/README.template
@@ -69,6 +69,14 @@ _Definitely not a configuration that I would recommend to normal users._
   <img alt="Memory Usage" src="https://img.shields.io/badge/Ram_Usage-{{homelabRamUsed}}/{{homelabRamTotal}}-blue">
 </p>
 </details>
+</br>
+<details>
+<summary>Contact</summary>
+<p>
+  Discord: <a href="https://discord.pixelic.dev">discord.pixelic.dev</a><br/>
+  E-Mail: <a href="mailto:contact@pixelic.dev">contact@pixelic.dev</a>
+</p>
+</details>
 
 ------------------------------------------------------------------
 <p align="center">
