--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "type": "module",
   "dependencies": {
     "axios": "1.6.8",
-    "handlebars": "4.7.8",
-    "moment-timezone": "0.5.45"
+    "handlebars": "4.7.8"
   },
   "peerDependencies": {
     "typescript": "5.0.0"
