--- a/README.template
+++ b/README.template
@@ -3,7 +3,7 @@
 <p>
 I'm a mainly back-end developer that occasionally does some front-end.
 
-I currently reside in Germany,<br />
+I currently reside in {{country}},<br />
 and it's {{time}},<br />
 with temperatures of {{weather}} weather.
 
@@ -75,6 +75,6 @@ _Definitely not a configuration that I would recommend to normal users._
 
 ------------------------------------------------------------------
 <p align="center">
-This <b>README.md</b> file is generated <b>every 4 hours</b>!</br>
+This <b>README.md</b> file is generated <b>every 3 hours</b>!</br>
 Last refresh: {{lastRefresh}}<br />
 </p>
