--- a/README.template
+++ b/README.template
@@ -75,6 +75,6 @@ _Definitely not a configuration that I would recommend to normal users._
 
 ------------------------------------------------------------------
 <p align="center">
-This <b>README.md</b> file is generated <b>every 3 hours</b>!</br>
-Last refresh: {{lastRefresh}}
+This <b>README.md</b> file gets updated <b>every hour</b>!</br>
+Last update: {{lastRefresh}}
 </p>
