--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -30,5 +30,5 @@ jobs:
       - uses: EndBug/add-and-commit@v9
         with:
           add: "README.md"
-          message: "Generated `README.md`"
+          message: "Updated `README.md` File"
           default_author: "github_actions"
