--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "module": "index.ts",
   "type": "module",
   "dependencies": {
-    "axios": "1.7.2",
-    "handlebars": "4.7.8"
+    "axios": "^1.7.4",
+    "handlebars": "^4.7.8"
   },
   "peerDependencies": {
-    "typescript": "5.4.5"
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
-    "@types/bun": "1.1.6"
+    "@types/bun": "^1.1.6"
   }
 }
